improve workflow layout and naming

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,13 @@
-name: CI
+name: test
 
 on: [push]
 
 jobs:
   test:
-
     runs-on: windows-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Run tests
+    - name: retrieve repo
+      uses: actions/checkout@v1
+    - name: run tests
       shell: powershell
       run: Invoke-Pester
